Fixed footer style on mobile devices

--- a/src/IsaavAvaWebsite.UI/css/footer.css
+++ b/src/IsaavAvaWebsite.UI/css/footer.css
@@ -35,7 +35,7 @@
         margin: 15px 25px;
     }
 
-@media only screen and (min-width: 600px)
+@media only screen and (min-width: 768px)
 {
     footer
     {
