--- a/src/IsaavAvaWebsite.UI/css/item.css
+++ b/src/IsaavAvaWebsite.UI/css/item.css
@@ -18,3 +18,8 @@ h4
 {
     margin-top: 20px;
 }
+
+.facebook
+{
+    margin-top: 50px;
+}
